...
            "state" : "translated",
            "value" : "هيكل المستند."
          }
        }
      }
    },
    "Done" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تم"
...
            "value" : "كوستار"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "CoStar"
          }
        }
      }
    },
    "personalization.copilot.costar.role" : {
      "extractionState" : "manual",
...
            "state" : "translated",
            "value" : "إرسال مجددًا"
          }
        }
      }
    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الإعدادات"
...
